--- a/bdf_office/pubspec.yaml
+++ b/bdf_office/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_flutter_pdfviewer: ^20.2.46-beta
+  pdf: ^3.8.3
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/bdfs/
+    - assets/pdfs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
