--- a/bdf_office/pubspec.yaml
+++ b/bdf_office/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^20.2.46-beta
   pdf: ^3.8.3
   path_provider: ^2.0.11
+  printing: ^5.9.2
 
 dev_dependencies:
   flutter_test:
