--- a/bdf_office/pubspec.yaml
+++ b/bdf_office/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pdf: ^3.8.3
   path_provider: ^2.0.11
   printing: ^5.9.2
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_test:
