--- a/bdf_office/pubspec.yaml
+++ b/bdf_office/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.0.11
   printing: ^5.9.2
   permission_handler: ^10.0.0
+  share_plus: ^4.0.10+1
 
 dev_dependencies:
   flutter_test:
